# Minesweeper-C-

./: CMakeLists.txt  README.md
header/: functions.h  mineswepper.h
src/: functions.cpp  main.cpp  mineswepper.cpp
